fixing gallery image full screen preview issue on IE11, where image was getting stretched.
updating README.md to setup and run the code in a new machine.

--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -67,12 +67,21 @@
   height: calc(100% - 3rem);
   width: calc(100% - 6rem);
   margin: 1.5rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
+  white-space: nowrap;
+  font-size: 0;
+}
+
+.slide:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
 }
 
 .img {
+  display: inline-block;
+  vertical-align: middle;
   max-height: 100%;
   max-width: 100%;
 }
